--- a/main.html
+++ b/main.html
@@ -3,11 +3,15 @@
 <html>
 
 <head>
+	<title>Styling the Main Content</title>
 	<link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
+	<main>
+		<p class="hello-accio">Hello Accio Job</p>
+	</main>
     <script type="text/javascript" src="./script.js">
 </script>
 
