--- a/main.html
+++ b/main.html
@@ -9,7 +9,7 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<main>
+	<main class="accio" id="job">
 		<p class="hello-accio">Hello Accio Job</p>
 	</main>
     <script type="text/javascript" src="./script.js">
